--- a/sde_design/skin6/popup/popup_10.html
+++ b/sde_design/skin6/popup/popup_10.html
@@ -8,11 +8,17 @@ p {margin:0px;}
 </style>
 <title>NS홈쇼핑론칭기념사전구매찬스</title>
 </head>
-<body><!-- Google Tag Manager --><script>
+<body>
+<!-- Google Tag Manager -->
+<!--
+<script>
 (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TT6QFVG');
-</script><!-- End Google Tag Manager --><a href="https://bit.ly/2NrtiaN" target="_blank"><img src="/web/upload/NNEditor/20191114/copy-1573709885-pop20191114.jpg"
+</script>
+-->
+<!-- End Google Tag Manager -->
+<a href="https://bit.ly/2NrtiaN" target="_blank"><img src="/web/upload/NNEditor/20191114/copy-1573709885-pop20191114.jpg"
   style="width: 378px; height: 602px;"></a><div module="Popup_Footer">{$footer}</div></body></html>
