--- a/sde_design/skin6/_sp/apps/module/insta/insta.html
+++ b/sde_design/skin6/_sp/apps/module/insta/insta.html
@@ -7,6 +7,7 @@
     <p class="insta_hashtag">
         <a href="https://www.instagram.com/zenatea_official/" target="_blank">@zenatea_official</a><br />
         <a href="https://www.instagram.com/explore/tags/제나차" target="_blank">#제나차</a>
+        <a href="https://www.instagram.com/explore/tags/제나차" target="_blank">#제나선</a>
     </p>
     
     <div class="mh_insta_thumb_wrap">
