- 로고파일 변경 - 메인 이벤트 이미지 업로드 - 헤더 마크업 및 스타일시트 변경 - 메인 배너, 이벤트클립 레이아웃 - 인스타 소스 정리

--- a/sde_design/skin6/order/ec_orderform/confirm.html
+++ b/sde_design/skin6/order/ec_orderform/confirm.html
@@ -799,6 +799,10 @@
                                                                     <th>모바일할인</th>
                                                                     <td class="right">-<span id="{$confirm_total_mobilesale_id}"></span></td>
                                                                 </tr>
+                                                                <tr id="{$confirm_total_subscriptionpayseq_area}">
+                                                                    <th>정기배송할인</th>
+                                                                    <td class="right">-<span id="{$confirm_total_subscriptionpayseq_id}"></span></td>
+                                                                </tr>
                                                                 <tr id="{$confirm_total_periodsale_area}">
                                                                     <th>기간할인</th>
                                                                     <td class="right">-<span id="{$confirm_total_periodsale_id}"></span></td>
