- 체험단 게시판, 제품 상세페이지, 게시판 자바스크립트

--- a/sde_design/mobile1/_wg/import/insta.html
+++ b/sde_design/mobile1/_wg/import/insta.html
@@ -35,6 +35,7 @@
 .mh_minsta_item {
 	position: relative;
 	text-align:center;
+	margin-top: 50px;
 	padding: 50px 0;
 	background: url('/image/main/insta_bg.jpg') no-repeat;
 	background-attachment: fixed;
