- 이벤트 프로모션 업데이트

--- a/sde_design/mobile1/index.html
+++ b/sde_design/mobile1/index.html
@@ -13,6 +13,26 @@
 <!-- 이벤트 롤링
 @import(/_wg/import/JS_quickEvent.html)-->
 
+<!--이벤트-->
+<div class="main_event">
+	<div class="mh_main_product_header">
+		<span class="en">제나차와 함께하는</span>
+		<span class="ko">가정의 달 프로젝트</span>
+	</div>
+	<ul class="eventclip">
+		<li>
+			<a href="https://moonhillfood.com/article/event/8/1439/"><img src="/image/main/eventclip_eloge.jpg" alt="eventclip" /></a>
+		</li>
+		<li class="small">
+            <a href="https://moonhillfood.com/article/event/8/1436/"><img src="/image/main/eventclip_supporters.jpg" alt="eventclip" /></a>
+            <a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
+		</li>
+		<li>
+            <a href="https://moonhillfood.com/article/event/8/1431/"><img src="/image/main/eventclip_coupon.jpg" alt="eventclip" /></a>
+		</li>
+	</ul>
+</div>
+
 
 <div class="mPrdList typeThumb" module="product_listmain_1">
 <!--@css(/css/module/product/8/listmain_1.css)-->
