--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -51,32 +51,33 @@
 	-->
 </div><!--//여기까지-->
 
-<!--이벤트
+<!--이벤트-->
 <div class="main_event">
 	<div class="mh_main_product_header">
-		<span class="en">제나와 함께하는</span>
-		<span class="ko">봄 건강 프로젝트</span>
+		<span class="en">제나차와 함께하는</span>
+		<span class="ko">가정의 달 프로젝트</span>
 	</div>
 	<ul class="eventclip">
 		<li class="large">
-			<img src="/image/main/eventclip_tea.jpg" alt="eventclip" />
+			<a href="https://moonhillfood.com/article/event/8/1439/"><img src="/image/main/eventclip_eloge.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
-			<img src="/image/main/eventclip_bottle.jpg" alt="eventclip" />
+			<a href="https://moonhillfood.com/article/event/8/1436/"><img src="/image/main/eventclip_supporters.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
-			<img src="/image/main/eventclip_review.jpg" alt="eventclip" />
+			<a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
 		</li>
 		<li class="large">
-			<img src="/image/main/eventclip_sun.jpg" alt="eventclip" />
+			<a href="https://moonhillfood.com/article/event/8/1431/"><img src="/image/main/eventclip_coupon.jpg" alt="eventclip" /></a>
 		</li>
 	</ul>
 </div>
--->
+
+
 <div module="product_listmain_1">
     <!--@css(/css/module/product/3245/listmain_1.css)-->
     <!--
-        $count = 6
+        $count = 9
         $basket_result = /product/add_basket.html
         $basket_option = /product/basket_option.html
     -->
