- 이벤트 관련 유지보수

--- a/sde_design/mobile1/_wg/import/bar_left.html
+++ b/sde_design/mobile1/_wg/import/bar_left.html
@@ -117,11 +117,6 @@
                 <h2 class="selected">소식<button type="button" class="icoCategory">펼침</button></h2>
 				<ul class="categoryList">
 					<li>
-						<a href="/board/gallery/list.html?board_no=8" class="cate board">이벤트</a>
-                        <a href="/board/gallery/list.html?board_no=8" class="view">게시글보기</a>
-					</li>
-					
-					<li>
 						<a href="/board/free/list.html?board_no=1" class="cate board">공지사항</a>
                         <a href="/board/free/list.html?board_no=1" class="view">게시글보기</a>
 					</li>
@@ -134,6 +129,18 @@
                         <a href="/board/gallery/list.html?board_no=12" class="view">게시글보기</a>
 					</li>
 				</ul>
+
+	            <h2 class="selected">이벤트<button type="button" class="icoCategory">펼침</button></h2>
+	            <ul class="categoryList">
+		            <li>
+			            <a href="https://moonhillfood.com/board/gallery/list.html?board_no=8" class="cate board">이벤트 전체보기</a>
+			            <a href="https://moonhillfood.com/board/gallery/list.html?board_no=8" class="view">게시글보기</a>
+		            </li>
+		            <li>
+			            <a href="https://m.moonhillfood.com/board/free/list.html?board_no=1002" class="cate board">체험단 신청 게시판</a>
+			            <a href="https://m.moonhillfood.com/board/free/list.html?board_no=1002" class="view">게시글보기</a>
+		            </li>
+	            </ul>
                 <!--<ul module="Layout_BoardInfo" class="categoryList">
                     <li>
                         <a href="{$board_list_url}" class="cate board">{$board_name|cut 25}</a>
