- 베스트 리뷰 작성

--- a/sde_design/skin6/board/product/list.html
+++ b/sde_design/skin6/board/product/list.html
@@ -48,6 +48,7 @@
 					</div>
 				</div>
 -->
+				<div class="best_link" id="best_link"></div>
 				<p class="notice" id="notice"></p>
 			</h1>
 		</div><!--//종료-->
