- 메인 메뉴 타임세일 추가

--- a/sde_design/mobile1/_wg/import/bar_left.html
+++ b/sde_design/mobile1/_wg/import/bar_left.html
@@ -65,6 +65,10 @@
                         <a href="/product/list.html?cate_no=53" class="cate" >개인결제창</a>
                         <a href="/product/list.html?cate_no=53" class="view">상품보기</a>
                     </li>
+	                <li>
+		                <a href="/product/list.html?cate_no=53" class="cate" >타임세일</a>
+		                <a href="/product/list.html?cate_no=53" class="view">상품보기</a>
+	                </li>
 	                <!--
 					<li>
                         <a href="/product/list.html?cate_no=50" class="cate" >파트너십</a>
