쇼핑 서브타이틀 추가

--- a/sde_design/skin6/product/list.html
+++ b/sde_design/skin6/product/list.html
@@ -29,7 +29,7 @@
 		<span>{$top_image1_tag}</span><span>{$top_image2_tag}</span><span>{$top_image3_tag}</span>
 		<span class="en">ZENA</span>
 		<span class="ko">SHOPPING</span>
-		<!--<span class="ko">{$title_text_or_image}</span>-->
+		<span class="subko">{$title_text_or_image}</span>
 		<i class="sp-title-like {$disp_likecate_class}"><button type="button">{$disp_likecate_icon}<strong count="{$disp_likecate_count|striptag}">{$disp_likecate_count}</strong></button></i>
 	</h1>
 </div><!--//종료-->
