5월 베스트 리뷰 이벤트

--- a/sde_design/skin6/order/ec_orderform/paymethod.html
+++ b/sde_design/skin6/order/ec_orderform/paymethod.html
@@ -126,6 +126,13 @@
                         <li>네이버페이는 네이버ID로 별도 앱 설치 없이 신용카드 또는 은행 계좌 정보를 등록하여 네이버페이 비밀번호로 결제할 수 있는 간편결제 서비스입니다.</li>
                         <li>네이버페이 카드 간편결제는 네이버페이에서 제공하는 카드사별 무이자, 청구 할인 혜택을 받을 수 있습니다.</li>
                     </ul>
+
+                    <!-- 토스 도움말 -->
+                    <ul id="{$toss_info}" class="ec-base-help typeDash">
+                        <li>토스는 간편하게 지문 또는 비밀번호만으로 결제할 수 있는 빠르고 편리한 간편 결제 서비스입니다.</li>
+                        <li>토스 결제 후 취소/반품 등이 발생할 경우 토스를 통한 신용카드 취소/토스머니 환불이 이루어집니다. </li>
+                        <li>토스 이용가능 결제수단 : 국내 발행 신용/체크카드, 토스머니</li>
+                    </ul>
                 </div>
             </div>
 
