메인 배너 및 프로젝트 내용 6월분으로 변경

--- a/sde_design/mobile1/index.html
+++ b/sde_design/mobile1/index.html
@@ -17,14 +17,14 @@
 <div class="main_event">
 	<div class="mh_main_product_header">
 		<span class="en">제나차와 함께하는</span>
-		<span class="ko">가정의 달 프로젝트</span>
+		<span class="ko">이너뷰티 프로젝트</span>
 	</div>
 	<ul class="eventclip">
 		<li>
 			<a href="https://moonhillfood.com/article/event/8/1651/"><img src="/image/main/eventclip_present.jpg" alt="eventclip" /></a>
 		</li>
 		<li class="small">
-            <a href="https://moonhillfood.com/article/event/8/1639/"><img src="/image/main/eventclip_family.jpg" alt="eventclip" /></a>
+            <a href="#"><img src="/image/main/thumb.jpg" alt="eventclip" /></a>
             <a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
