7월 이벤트 업데이트

--- a/sde_design/mobile1/index.html
+++ b/sde_design/mobile1/index.html
@@ -21,16 +21,13 @@
 	</div>
 	<ul class="eventclip">
 		<li>
-			<a href="https://moonhillfood.com/article/event/8/1659/"><img src="/image/main/eventclip_summer.jpg" alt="eventclip" /></a>
-		</li>
-		<li class="small">
-            <a href="#"><img src="/image/main/thumb.jpg" alt="eventclip" /></a>
-            <a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
+            <a href="https://moonhillfood.com/article/event/8/1667/"><img src="/image/main/eventclip_bottle.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
-            <a href="https://moonhillfood.com/article/event/8/1431/"><img src="/image/main/eventclip_coupon.jpg" alt="eventclip" /></a>
+            <a class="review" href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
+            <a class="coupon" href="https://moonhillfood.com/article/event/8/1431/"><img src="/image/main/eventclip_coupon.jpg" alt="eventclip" /></a>
 		</li>
-	</ul>
+    </ul>
 </div>
 
 <!-- MD's PICK -->
@@ -152,8 +149,7 @@
     <a href="{$attend_url}"><img src="http://img.echosting.cafe24.com/skin/mobile_ko_KR/layout/bnr_attend.png" alt="출석체크 이벤트(매일매일 출석도장 쾅쾅쾅!)"></a>
 </p>
 
-<!-- 인스타그램 -->
-<!--@import(/_wg/import/insta.html)-->
+
 
 <!-- 공지사항 롤링 -->
 <!--@import(/_wg/import/JS_quickNotice.html)-->
