--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -58,11 +58,8 @@
 		<span class="ko">이너뷰티 프로젝트</span>
 	</div>
 	<ul class="eventclip">
-		<li class="large">
-			<a href="https://moonhillfood.com/article/event/8/1659/"><img src="/image/main/eventclip_summer.jpg" alt="eventclip" /></a>
-		</li>
-		<li>
-			<a href="#"><img src="/image/main/thumb.jpg" alt="eventclip" /></a>
+		<li class="full">
+			<a href="https://moonhillfood.com/article/event/8/1667/"><img src="/image/main/eventclip_bottle.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
 			<a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
@@ -259,8 +256,5 @@
 		</ul>
 	</div>
 </div>
-
-<!--인스타그램-->
-<!--@import(/_sp/apps/module/insta/insta.html)-->
 
 <!--@define(cmc_log)-->
