--- a/sde_design/skin6/order/ec_orderform/orderProduct.html
+++ b/sde_design/skin6/order/ec_orderform/orderProduct.html
@@ -20,7 +20,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -60,7 +60,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -142,7 +142,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -182,7 +182,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -264,7 +264,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -304,7 +304,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -388,7 +388,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
@@ -428,7 +428,7 @@
                             <div class="displaynone">{$chk_order_cancel_list}</div>
                             <div class="thumbnail"><a href="/product/detail.html{$param}"><img src="{$product_image}" alt="" width="90" height="90" /></a></div>
                             <div class="description">
-                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link}</strong>
+                                <strong class="prdName" title="상품명">{$set_product_icon} {$product_name_link} {$crowd_funding_icon}</strong>
                                 <ul class="info">
                                     <li class="{$allotment_display|display}">무이자할부 상품</li>
                                     <li title="유효기간" class="{$expiration_date_display|display}">{$expiration_date} 내 사용</li>
