웹화면 비디오 갤러리 업데이트2

--- a/sde_design/mobile1/index.html
+++ b/sde_design/mobile1/index.html
@@ -149,6 +149,7 @@
     <a href="{$attend_url}"><img src="http://img.echosting.cafe24.com/skin/mobile_ko_KR/layout/bnr_attend.png" alt="출석체크 이벤트(매일매일 출석도장 쾅쾅쾅!)"></a>
 </p>
 
+<!--비디오갤러리-->
 
 
 <!-- 공지사항 롤링 -->
