--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -169,7 +169,7 @@
 				</li>
 			</ul>
 		</div>
-		<a href="/board/gallery/list.html?board_no=12" class="more"><img src="http://img.echosting.cafe24.com/skin/base_ko_KR/board/btn_board_more.gif" alt="더보기" /></a>
+		<a href="/board/gallery/list.html?board_no=12" class="more">홍보영상 더보기</a>
 	</div>
 </div>
 
