- 정지영 라디오 입점 배너 - 이벤트배너 수정

--- a/sde_design/mobile1/index.html
+++ b/sde_design/mobile1/index.html
@@ -20,13 +20,17 @@
 		<span class="ko">이너뷰티 프로젝트</span>
 	</div>
 	<ul class="eventclip">
+        <!-- onclick="return false;" -->
 		<li>
-            <a href="https://moonhillfood.com/article/event/8/1667/"><img src="/image/main/eventclip_bottle.jpg" alt="eventclip" /></a>
+            <a href="#" onclick="return false;"><img src="/image/main/eventclip_ready.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
             <a class="review" href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
             <a class="coupon" href="https://moonhillfood.com/article/event/8/1431/"><img src="/image/main/eventclip_coupon.jpg" alt="eventclip" /></a>
 		</li>
+        <li class="full">
+            <a href="#" onclick="return false;"><img src="/image/main/jiyoung_radio.jpg" alt="jiyoung" /></a>
+        </li>
     </ul>
 </div>
 
