--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -60,7 +60,7 @@
 	<ul class="eventclip">
 		<!-- onclick="return false;" -->
 		<li class="full">
-			<a href="#" onclick="return false;"><img src="/image/main/eventclip_ready.jpg" alt="eventclip" /></a>
+			<a href="http://shop1.moonhillfd.cafe24.com/article/event/8/1699/"><img src="/image/main/eventclip_present.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
 			<a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
